--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,11 +17,18 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+        debug{
+            resValue('string', "PLACES_API_KEY", GOOGLE_API_KEY)
+        }
     }
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
+    }
+
+    buildTypes.each {
+        it.buildConfigField("String", "GOOGLE_API_KEY", GOOGLE_API_KEY)
     }
 }
 
