--- a/gradle.properties
+++ b/gradle.properties
@@ -14,4 +14,5 @@ org.gradle.jvmargs=-Xmx1536m
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 
+GOOGLE_API_KEY = "AIzaSyBSZswcDe5ittJcxoqqr02-vroTt63ITAw"
 
